<resources>
    <string name="app_name">My Modules</string>
    <string name="c382">C382 IT Service Delivery</string>
    <string name="c322">C322 Data Centre and Cloud Mgmt</string>
    <string name="c346">C346 Mobile App Development</string>
    <string name="main">BACK TO MAIN PAGE</string>
    <string name="mc">Module Code:</string>
    <string name="mn">Module Name:</string>
    <string name="ay">Academic Year:</string>
    <string name="semester">Semester</string>
    <string name="module_credit">Module Credit:</string>
    <string name="venue">Venue:</string>
    <string name="back_to_main_page">BACK TO MAIN PAGE</string>
</resources>