<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView382"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c382" />

    <TextView
        android:id="@+id/textView322"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c322" />

    <TextView
        android:id="@+id/textView346"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c346" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
